--- a/scss/cadenza.scss
+++ b/scss/cadenza.scss
@@ -25,7 +25,8 @@
     'modules/_tables',
     'modules/_media',
     'modules/_state',
-    'modules/_alerts';
+    'modules/_alerts',
+    'modules/_animations';
 
 /* Import Extensions */
 @import
