--- a/scss/settings/_helpers.scss
+++ b/scss/settings/_helpers.scss
@@ -10,6 +10,38 @@
     font-size: ($_font-size / $base)#{$unit} #{$_important};
 }
 
+@mixin background(
+    $color, 
+    $threshold: $theme-lightness-threshold, 
+    $color-dark: $color-dark, 
+    $color-light: $color-light
+) 
+{
+    $_color-foreground: $color-dark;
+    $_color-shaded: darken($color, $theme-darken-percent);
+
+    @if lightness($color) < $threshold {
+        $_color-foreground: $color-light;
+        $_color-shaded: lighten($color, $theme-lighten-percent);
+
+        a {
+            color: mix($color, $_color-foreground, $theme-mix-percent);
+
+            &:hover { color: $_color-foreground; }
+        }
+    }
+
+    background-color: $color;
+    color: $_color-foreground;
+
+    label, .label {
+        &.prefix, &.postfix, &.affix {
+            color: $_color-foreground;
+            background-color: $_color-shaded;
+        }
+    }
+}
+
 // Button Extension
 // ================
 
