Badge styling inside buttons

--- a/scss/modules/_buttons.scss
+++ b/scss/modules/_buttons.scss
@@ -55,6 +55,10 @@
         color: $color-anchor;
         border: none;
     }
+
+    %label-layout {
+        display: inline;
+    }
 }
 
 %button-group-layout {
