--- a/scss/modules/_animations.scss
+++ b/scss/modules/_animations.scss
@@ -74,3 +74,14 @@
     from { opacity: 1; -webkit-transform: scale(1); }
     to { opacity: 0; -webkit-transform: scale(1.2); }
 }
+
+%animation-slideLeft-active { @include animation(slideLeft-active); }
+%animation-slideLeft-inactive { @include animation(slideLeft-inactive); }
+@include keyframes(slideLeft-active) {
+    from {  }
+    to { opacity: 1; -webkit-transform: scale(1); }
+}
+@include keyframes(slideLeft-inactive) {
+    from { opacity: 1; -webkit-transform: scale(1); }
+    to { opacity: 0; -webkit-transform: scale(1.2); }
+}
