--- a/scss/modules/_type.scss
+++ b/scss/modules/_type.scss
@@ -1,6 +1,18 @@
-// Include Open Sans
+// Include Custom Types
 @import url($type-custom-import);
+@import url($type-secondary-import);
 
+%type-primary {
+    @if $type-use-custom {
+        font-family: join($type-custom-font-family, $type-base-font-family);
+    } @else {
+        font-family: $type-base-font-family;
+    }
+}
+
+%type-secondary {
+    font-family: $type-secondary-font-family;
+}
 
 @mixin typeScaleRelative($exponent: 1, $ratio: $type-ratio) {
     font-size: percentage(pow($ratio, $exponent));
@@ -56,8 +68,9 @@ html {
 }
 
 body {
+    @extend %type-primary;
+
     font-style: normal;
-    font-family: join($type-custom-font-family, $type-base-font-family);
     color: $type-base-color;
     text-rendering: optimizeLegibility;
     word-wrap: break-word;
@@ -65,6 +78,8 @@ body {
     @include experimental(hyphens, auto);
     @include headings;
 }
+
+.type-secondary { @extend %type-secondary; }
 
 a {
     text-decoration: $type-anchor-decoration;
